--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	<parent>
 		<groupId>br.com.objectos</groupId>
 		<artifactId>parent</artifactId>
-		<version>4</version>
+		<version>7</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>way-secshell</artifactId>
 	<name>objectos :: way :: secure shell</name>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<description>A thin wrapper around the JSch library.</description>
 	<url>https://github.com/objectos/way-secshell</url>
 	<licenses>
@@ -21,8 +21,8 @@
 		<connection>scm:git:git://objectos/way-secshell.git</connection>
 		<developerConnection>scm:git:git@github.com:objectos/way-secshell.git</developerConnection>
 		<url>https://github.com/objectos/way-secshell</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 	<developers>
 		<developer>
 			<id>moe</id>
@@ -34,6 +34,27 @@
 		<com.jcraft.agentproxy.version>0.0.7</com.jcraft.agentproxy.version>
 		<com.jcraft.jsch.version>0.1.50</com.jcraft.jsch.version>
 	</properties>
+	<profiles>
+		<profile>
+			<id>jenkins-skip-tests</id>
+			<activation>
+				<property>
+					<name>BUILD_NUMBER</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skipTests>true</skipTests>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>br.com.objectos</groupId>
