--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>way-secshell</artifactId>
 	<name>objectos :: way :: secure shell</name>
-	<version>0.3.1-SNAPSHOT</version>
+	<version>0.3.1</version>
 	<description>A thin wrapper around the JSch library.</description>
 	<url>https://github.com/objectos/way-secshell</url>
 	<licenses>
@@ -21,7 +21,7 @@
 		<connection>scm:git:git://objectos/way-secshell.git</connection>
 		<developerConnection>scm:git:git@github.com:objectos/way-secshell.git</developerConnection>
 		<url>https://github.com/objectos/way-secshell</url>
-		<tag>HEAD</tag>
+		<tag>way-secshell-0.3.1</tag>
 	</scm>
 	<developers>
 		<developer>
